# viperleed-jax

./: .git-blame-ignore-revs  .gitattributes  .gitignore  Cu(111).ipynb  Cu(111)_from_slab_and_rpars.ipynb  Fe2O3-r_cut-1x1.ipynb  Fe2O3_Rfactors.ipynb  README.md  delta.py  delta_tests.ipynb  fe2O3_r_cut_example.py  fe2O3_unrelaxed.py  gaunt_coefficients.py  lib_math.py  lib_phaseshifts.py  lib_tensors.py  lib_tscatf.py  notes_on_improvements.md  on_the_fly.ylm  pre-calculate-Gaunt.ipynb  pre-calculate-pauls-gaunt.ipynb  propagator_testing.ipynb  propagator_values.ipynb  pyproject.toml  quick_profile.py  test_cu.py.prof  testing_delta_Cu(111).ipynb
Cu(111)/: PARAMETERS  VIBROCC
examples/: Cu111.ipynb  Fe2O3_converged.ipynb  Fe2O3_unrelaxed.ipynb  Fe3O4_111_FK.ipynb  Ir_100_2x1_O.ipynb  Pt_111_10x10_Te_converged.ipynb
old_notebooks/: Bessel_benchmarks.ipynb  Cu(111).ipynb  Cu(111)_from_slab_and_rpars.ipynb  Fe2O3-r_cut-1x1_interpolation_tests.ipynb  delta_tests.ipynb  harmony_benchmark.ipynb  test_bessel.ipynb  test_nans.ipynb
src/: base.py  batching.py  constants.py  data_structures.py  delta.py  delta_slab.py  dense_quantum_numbers.py  from_state.py  gaunt_coefficients.py  geo_parameters.py  intensity.py  interpolation.py  lib_delta.py  lib_intensity.py  lib_math.py  lib_phaseshifts.py  lib_tensors.py  lib_tscatf.py  occ_parameters.py  parameter_handler.py  parameter_space.py  parameters.py  rfactor.py  t_matrix.py  tensor_calculator.py  trapezoid.py
src/files/: tensors.py
src/otftleed/: batching.py  data_structures.py  dense_quantum_numbers.py  gaunt_coefficients.py  hashable_array.py  intensity.py  lib_math.py  lib_tensors.py  parameter_handler.py  parameter_space.py  t_matrix.py  tensor_calculator.py
src/otftleed/parameters/: geo_parameters.py  occ_parameters.py  v0r_parameters.py  vib_parameters.py
src/parameters/: base_parameters.py  geo_parameters.py  occ_parameters.py  v0r_parameters.py  vib_parameters.py
src/spherical_bessel/: functions.py  functions_series.py
src/viperleed_jax/: __init__.py  atom_basis.py  atomic_units.py  base.py  base_scatterers.py  batching.py  constants.py  data_structures.py  delta.py  dense_quantum_numbers.py  from_objects.py  from_state.py  gaunt_coefficients.py  hashable_array.py  intensity.py  lib_delta.py  lib_intensity.py  lib_math.py  lib_tensors.py  optimization.py  parameter_space.py  propagator.py  ref_calc_data.py  t_matrix.py  tensor_calculator.py  unit_conversion.py  utils.py
src/viperleed_jax/analysis/: calc_trajectory.py  optimization_history.py  ref_calc_history.py
src/viperleed_jax/analysis/plotting/: cmaes_parameter_scatter.py  parameter_scatter.py  rfactor_progress.py
src/viperleed_jax/files/: __init__.py  deltas.py  displacements.py  phaseshifts.py  tensors.py
src/viperleed_jax/lib/: bounded_simplex.py  calculator.py  math.py  matrix.py
src/viperleed_jax/lib/derived_quantities/: base.py  normalized_occupations.py  onset_height_change.py  propagtor.py  t_matrix.py
src/viperleed_jax/optimization/: __init__.py  history.py  iterator.py  optimizer.py  plotting.py  progress.py  result.py
src/viperleed_jax/parameters/: base_parameters.py  displacement_range.py  displacement_tree_layers.py  errors.py  geo_parameters.py  hierarchical_linear_tree.py  linear_transfomer.py  linear_transformer.py  linear_tree_nodes.py  meta_parameters.py  occ_parameters.py  tree.py  v0r_parameters.py  vib_parameters.py
src/viperleed_jax/transformation_tree/: derived_quantities.py  displacement_range.py  displacement_tree_layers.py  errors.py  functionals.py  geo_parameters.py  linear_transformer.py  linear_tree_nodes.py  meta_parameters.py  nodes.py  occ_parameters.py  reduced_space.py  transformable_property.py  tree.py  vib_parameters.py
tests/: calc_info.py  conftest.py  helpers.py  r_factor_tests.ipynb  structures.py  temp_test_lib_delta.py  temp_test_main.py  test_atom_basis.py  test_atomic_units.py  test_base_scatterers.py  test_batching.py  test_dense_quantum_numbers.py  test_lib_delta.py  test_main.py  test_math.py  test_parameter_space.py  test_propagator.py  test_reference_data.py  test_t_matrix.py  test_tensor_calculator.py  test_tensors.py  test_unit_conversion.py  viper_init_states.py
tests/calc/: __init__.py  poscar_slabs.py  tags.py  testinfo.py
tests/files/: test_displacements.py  test_phaseshifts.py
tests/fixtures/: base.py  calc_info.py  cu_111_dynamic_l_max.py  cu_111_fixed_l_max.py  fe2o3_012_converged.py  pt25rh75_O_3x1.py
tests/lib/: bounded_simplex_helpers.py  test_bounded_simplex.py  test_calculator.py  test_math.py
tests/lib/derived_quantities/: test_normalized_occupations.py
tests/lib/tensor_leed/: test_propagator.py  test_t_matrix.py
tests/parameters/: test_linear_transformer.py  test_linear_tree_nodes.py
tests/test_data/: displacements
tests/test_data/Cu_111/: DISPLACEMENTS  PARAMETERS  PHASESHIFTS  POSCAR
tests/test_data/Cu_111_2/: IVBEAMS  POSCAR
tests/test_data/Cu_111_LMAX14/: IVBEAMS  PARAMETERS
tests/test_data/Cu_111_dynamic_lmax/: EXPBEAMS.csv  PARAMETERS  PHASESHIFTS
tests/test_data/Fe2O3_012/: EXPBEAMS.csv  PARAMETERS  THEOBEAMS.csv  VIBROCC
tests/test_data/Fe2O3_012_old/: DISPLACEMENTS  PHASESHIFTS  POSCAR
tests/test_data/Fe3O4_111/: DISPLACEMENTS  DISPLACEMENTS_z_only  EXPBEAMS.csv  IVBEAMS  PARAMETERS  PHASESHIFTS  POSCAR  VIBROCC
tests/test_data/Ir_100_2x1_O/: DISPLACEMENTS_general
tests/test_data/Pt25Rh75_O_3x1/: DISPLACEMENTS  DISPLACEMENTS_geo  DISPLACEMENTS_simple  EXPBEAMS.csv  IVBEAMS  PARAMETERS  PHASESHIFTS  POSCAR  VIBROCC
tests/test_data/large_files/: Cu_111_make_test_data.ipynb  Fe2O3_converged_make_test_data.ipynb
tests/test_data/reference_values/: Cu_111_dynamic_l_max_TensErLEED_reference.npz  Cu_111_fixed_l_max_TensErLEED_reference.npz
tests/test_data/unrelaxed_frozen_for_testing/: PARAMETERS
tests/transformation_tree/: conftest.py  test_geo_parameters.py  test_linear_transformer.py  test_meta_parameters.py  test_nodes.py  test_occ_parameters.py  test_reduce_space.py  test_tree.py  test_vib_parameters.py
(+83 files in other folders)
