[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'viperleed-jax'
description = 'on the fly tensor LEED'
requires-python = '>=3.7'
version = '0.2.0'
license = {file = 'LICENSE'}

dependencies = [
    'jax',
    'numpy',
    'viperleed'
    'spbessax'
    ]

keywords = [
    'LEED',
    'Tensor LEED',
    'ViPErLEED',
    'JAX',
    ]

[project.optional-dependencies]
dev = [
    'pytest',
    'scipy',
    'matplotlib',
    ]

[tool.setuptools.packages.find]
where = ["src"]
include = ["viperleed_jax"]
namespaces = false
