[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'viperleed-jax'
description = 'on the fly tensor LEED'
requires-python = '>=3.7'
version = '0.3.0'
license = {file = 'LICENSE'}

dependencies = [
    'jax',
    'clinamen2>=2024.7.1',
    'numpy<2',
    'viperleed>=0.14.1',
    'spbessax>=0.1.3',
    'tqdm',
    'interpax',
    'anytree',
    ]

keywords = [
    'LEED',
    'Tensor LEED',
    'ViPErLEED',
    'JAX',
    ]

[project.optional-dependencies]
dev = [
    'pytest',
    'scipy',
    'matplotlib',
    ]

[tool.setuptools.packages.find]
where = ["src"]
include = ["viperleed_jax"]
namespaces = false


[tool.pylint]

    [tool.pylint.master]
    extension-pkg-whitelist = ['PyQt5', 'quicktions']
    extension-pkg-allow-list = ['PyQt5', 'quicktions']
    load-plugins = [
        'pylint.extensions.bad_builtin',
        'pylint.extensions.broad_try_clause',
        'pylint.extensions.check_elif',
        'pylint.extensions.code_style',
        'pylint.extensions.comparison_placement',
        'pylint.extensions.confusing_elif',
        'pylint.extensions.consider_refactoring_into_while_condition',
        'pylint.extensions.consider_ternary_expression',
        'pylint.extensions.dict_init_mutate',
        'pylint.extensions.docparams',
        'pylint.extensions.docstyle',
        'pylint.extensions.dunder',
        'pylint.extensions.empty_comment',
        'pylint.extensions.for_any_all',
        'pylint.extensions.magic_value',
        'pylint.extensions.mccabe',
        'pylint.extensions.overlapping_exceptions',
        'pylint.extensions.private_import',
        'pylint.extensions.redefined_variable_type',
        'pylint.extensions.set_membership',
        ]
    # It would be nice to have this set, but there are many language
    # features (e.g., equals in f-strings) that are simply not checked
    # even if this is set.
    # py-version = '3.7'

    [tool.pylint.basic]
    no-docstring-rgx = '^(?!__init__$)_'
    # The regexes below undo the changes in pylint 3.0 concerning
    # two-letter-long names. The regexes are the only ones that
    # were changed in github.com/pylint-dev/pylint/pull/8813. Note
    # that DEFAULT_NAME_RGX is the one used for function, method,
    # attr, argument, and variable. The long regexs are all the
    # same, and match lower_camel_case.
    # See github.com/pylint-dev/pylint/releases/tag/v3.0.0
    class-rgx = '[^\W\da-z][^\W_]+$'
    class-attribute-rgx = '([^\W\dA-Z][^\WA-Z]{2,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)$'
    function-rgx = '([^\W\dA-Z][^\WA-Z]{2,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)$'
    method-rgx = '([^\W\dA-Z][^\WA-Z]{2,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)$'
    attr-rgx = '([^\W\dA-Z][^\WA-Z]{2,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)$'
    argument-rgx = '([^\W\dA-Z][^\WA-Z]{2,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)$'
    variable-rgx = '([^\W\dA-Z][^\WA-Z]{2,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)$'

    [tool.pylint.main]
    check-quote-consistency = 'yes'

    [tool.pylint.format]
    max-line-length = 80

    [tool.pylint.messages_control]
    enable = [
        'useless-suppression',
        'use-implicit-booleaness-not-comparison-to-zero',
        'use-implicit-booleaness-not-comparison-to-string',
        ]
    disable = [
        'logging-fstring-interpolation',
        'consider-using-assignment-expr',  # We want to support 3.7 too
        ]

    [tool.pylint.reports]
    output-format = 'colorized'
    msg-template = '"{module} - L{line:4d}: {msg_id:5s}: {msg} ({symbol})"'

[tool.ruff]
    target-version = 'py37'
    line-length = 80
    indent-width = 4


    [tool.ruff.lint]
    # Enable all rules by default and then disable as needed
    select = ['ALL']

    ignore = [
        'ANN',      # do not require annotations
        'Q000',     # do not highlight quotes in check, as format can fix it
        'TD',       # allow todo comments
        'FA100',    # don't suggest for 'from __future__ import annotations'
        'G004',     # allow f-strings in logging
        'COM812',   # avoids conflicts with formatter
        'ISC001',   # avoids conflicts with formatter
        'TRY003',   # allow long error messages
        'EM101',    # allow string literals in errors
        'N802',     # don't complain about name with upper case R (for R-factor)
    ]
    flake8-quotes.inline-quotes='single'

    [tool.ruff.lint.per-file-ignores]
    # Ignore specific rules in tests
    'tests/*' = [
        'D',        # ignore docstring checks in tests
        'S101',     # allow asserts
        'PLR2004',  # allow magic value comparison in tests
        'SLF001',   # allow checking private members
    ]

    [tool.ruff.lint.pydocstyle]
    # Numpy style docstrings
    convention = 'numpy'

    [tool.ruff.format]
    quote-style = 'single'
    docstring-code-format = true
